<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchParameter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchParameterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">
            <ImageButton
                android:id="@+id/search_back_to_home"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_back_48"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraintLayout"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:id="@+id/search_row1"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="1dp"
                app:cardElevation="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:textColor="@color/purple"
                            android:text="@string/dateSelect"
                            android:id="@+id/date_title"/>
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/begin_date_button"
                            app:layout_constraintStart_toEndOf="@+id/date_title"
                            android:layout_marginStart="10dp"
                            android:backgroundTint="@color/lavender"
                            app:cornerRadius = "20dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:textColor="@color/purple"
                            android:text="@string/timeSelect"
                            android:id="@+id/time_title"/>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/begin_time_button"
                            android:layout_marginStart="10dp"
                            android:backgroundTint="@color/lavender"
                            app:cornerRadius = "20dp"/>
                        <TextView
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:textColor="@color/purple"
                            android:text="@string/timeRangeMark"/>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/end_time_button"
                            android:layout_marginStart="10dp"
                            android:backgroundTint="@color/lavender"
                            app:cornerRadius = "20dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:textColor="@color/purple"
                            android:text="@string/payAmount"
                            android:id="@+id/pay_amount_title"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:id="@+id/pay_amount"
                            android:layout_marginStart="10dp"
                            app:layout_constraintStart_toEndOf="@+id/pay_amount_title"/>
                    </LinearLayout>
                    <Button
                        android:layout_width="300dp"
                        android:layout_height="60dp"
                        android:text="@string/paySearch"
                        android:id="@+id/searchButton"
                        android:textSize="18sp"
                        android:layout_marginTop="30dp"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/lavender"
                        app:cornerRadius = "20dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/search_row2"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_row1">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/clothingCard"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:id="@+id/aggregateArea">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fixedSearchTimeShort"
                        android:textSize="20sp"
                        android:textColor="@color/purple"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/searchFixed1"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@id/searchFixed1"
                        android:src="@drawable/ic_baseline_access_time_24"
                        android:contentDescription="@string/fixedSearchTimeShort"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:id="@+id/settingArea">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fixedSearchTimeLong"
                        android:textSize="20sp"
                        android:textColor="@color/purple"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/searchFixed2"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/searchFixed2"
                        android:src="@drawable/ic_baseline_more_time_24"
                        android:contentDescription="@string/fixedSearchTimeLong"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>